5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1590_1017.log
== SUBMITION (2019-03-31 14:21:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latidude de P2: ")))
g2 = radians(float(input("longitude de P2:")))
d= 6371.01 *acos(sin(t1)*(sin(t2) + (cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,  2))								 

-- EXECUTION TIME:
0.136325
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 9
    print(round(d,  2))								 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:22:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latidude de P2:")))
g2 = radians(float(input("longitude de P2:")))
d= 6371.01 *acos(sin(t1)*(sin(t2)+(cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,  2))								 

-- EXECUTION TIME:
0.1255
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 9
    print(round(d,  2))								 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:22:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latidude de P2:")))
g2 = radians(float(input("longitude de P2:")))
d= 6371.01 *acos(sin(t1)*(sin(t2)+(cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,  2))								 

-- ERROR:
File "XXXX", line 9
    print(round(d,  2))								 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:22:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latidude de P2:")))
g2 = radians(float(input("longitude de P2:")))
d= 6371.01 *acos(sin(t1)*(sin(t2)+(cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,  2))								 

-- EXECUTION TIME:
0.183672
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 9
    print(round(d,  2))								 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:26:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latidude de P2:")))
g2 = radians(float(input("longitude de P2:")))
d= 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,  2))								 

-- EXECUTION TIME:
0.129603
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 4, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:26:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latidude de P2:")))
g2 = radians(float(input("longitude de P2:")))
d= 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,  2))								 

-- EXECUTION TIME:
0.216007
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 4, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:30:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latidude de P2:")))
g2 = radians(float(input("longitude de P2:")))
d= 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))								 

-- EXECUTION TIME:
0.175795
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 4, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:32:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latidude de P2:")))
g2 = radians(float(input("longitude de P2:")))
d= 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))								 

-- EXECUTION TIME:
0.135638
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
